second time today

--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -50,6 +50,10 @@
                         <h6 class="collapse-header">Category:</h6>
                         <a class="collapse-item" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
                     </div>
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Sub Category:</h6>
+                        <a class="collapse-item" asp-area="" asp-controller="SubCategory" asp-action="Index">Sub Category</a>
+                    </div>
                 </div>
             </li>
 
