--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -47,13 +47,15 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Category:</h6>
-                        <a class="collapse-item" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+@*                         <h6 class="collapse-header">Category:</h6> *@
+                        <a class="collapse-item" asp-area="" asp-controller="Category" asp-action="Index">1. Category</a>
+                        <a class="collapse-item" asp-area="" asp-controller="SubCategory" asp-action="Index">2. Sub Category</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Item" asp-action="Index">3. Item</a>
                     </div>
-                    <div class="bg-white py-2 collapse-inner rounded">
+@*                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Sub Category:</h6>
                         <a class="collapse-item" asp-area="" asp-controller="SubCategory" asp-action="Index">Sub Category</a>
-                    </div>
+                    </div> *@
                 </div>
             </li>
 
