--- a/posSystem/Views/SubCategory/SubCategoryEdit.cshtml
+++ b/posSystem/Views/SubCategory/SubCategoryEdit.cshtml
@@ -42,6 +42,7 @@
                 subCatName: subCatName,
                 subCatCode: subCatCode,
                 subCId: subCId,
+                catId: catId,
             };
 
             $.ajax({
