--- a/posSystem/Views/SubCategory/SubCategoryIndex.cshtml
+++ b/posSystem/Views/SubCategory/SubCategoryIndex.cshtml
@@ -17,10 +17,16 @@
 
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Sub Category</h1>
-    <a href="/SubCategory/Create">Add Sub Category</a>
 </div>
 
-<a href="/SubCategory/Create" class="btn btn-outline-success">New</a>
+<div lass="d-sm-flex align-items-center justify-content-between mb-4">
+    <a href="/SubCategory/Create" class="btn btn-outline-success">Add Sub Category</a>
+</div>
+
+<di>
+    <p></p>
+</di>
+
 <table class="table">
     <thead>
         <tr>
