--- a/posSystem/Views/Shared/_Layout.cshtml
+++ b/posSystem/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
+
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
@@ -47,42 +48,39 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-@*                         <h6 class="collapse-header">Category:</h6> *@
                         <a class="collapse-item" asp-area="" asp-controller="Category" asp-action="Index">1. Category</a>
                         <a class="collapse-item" asp-area="" asp-controller="SubCategory" asp-action="Index">2. Sub Category</a>
                         <a class="collapse-item" asp-area="" asp-controller="Item" asp-action="Index">3. Item</a>
                     </div>
-@*                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Sub Category:</h6>
-                        <a class="collapse-item" asp-area="" asp-controller="SubCategory" asp-action="Index">Sub Category</a>
-                    </div> *@
                 </div>
             </li>
 
-            <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Amin
+                Admin
             </div>
 
-            <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
+                    <span>Admin Account</span>
                 </a>
                 <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="#">Login</a>
-                        <a class="collapse-item" href="#">Register</a>
-                        <a class="collapse-item" href="#">Forgot Password</a>
-                        <div class="collapse-divider"></div>
+                        <a class="collapse-item" asp-area="" asp-controller="Admin" asp-action="Index">1. Admin</a>
+                        <a class="collapse-item" asp-area="" asp-controller="" asp-action="">2. Member</a>
+                        <a class="collapse-item" asp-area="" asp-controller="" asp-action="">3. Staff</a>
                     </div>
                 </div>
             </li>
+
+            <!-- Divider -->
+
+
+            <!-- Nav Item - Pages Collapse Menu -->
+
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
