--- a/posSystem/wwwroot/css/sb-admin-2.css
+++ b/posSystem/wwwroot/css/sb-admin-2.css
@@ -10802,22 +10802,45 @@ a:focus {
   }
 }
 
+/*.bg-login-image {
+    background: src("~/img/pexels-goumbik-1420709.jpg");
+    background-position: center;
+    background-size: cover;
+}*/
+
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
-  background-position: center;
-  background-size: cover;
+    position: relative;
+    width: 100%;
+    padding-bottom: 0%; /* 4:3 aspect ratio */
+    overflow: hidden;
 }
 
+.responsive-image {
+    position: absolute;
+    /*width: 100%;*/
+    width: auto;
+    max-height: 750px;
+}
+
+/*.responsive-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: auto;*/ /* Maintain aspect ratio */
+    /*transform: translate(-50%, -50%);
+}*/
+
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
-  background-position: center;
-  background-size: cover;
+    background: src("/img/pexels-goumbik-1420709.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
-  background-position: center;
-  background-size: cover;
+    background: src("/img/pexels-goumbik-1420709.jpg");
+    background-position: center;
+    background-size: cover;
 }
 
 form.user .custom-checkbox.small label {
