--- a/posSystem/Views/Item/ItemEdit.cshtml
+++ b/posSystem/Views/Item/ItemEdit.cshtml
@@ -17,7 +17,7 @@
 
 <div class="mb-3">
     <label for="itemPrice" class="form-label">Item Price</label>
-    <input type="number" class="form-control" id="itemPrice" name="itemPrice" value="@Model.itemPrice">
+    <input type="number" class="form-control" id="itemPrice" name="itemPrice" value="@Model.itemSalePrice">
 </div>
 
 <div class="mb-3">
