--- a/posSystem/Views/Item/ItemIndex.cshtml
+++ b/posSystem/Views/Item/ItemIndex.cshtml
@@ -43,7 +43,7 @@
             <th scope="col">Created At</th>
             <th scope="col">Updated At</th>
             <th scope="col">Item Inputed By</th>
-            <td scope="col">Action</td>
+            <th scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
@@ -53,7 +53,7 @@
                 <th scope="row">@(++count + (_pageNo - 1) * _pageSize)</th>
                 <td>@item.itemCode</td>
                 <td>@item.itemName</td>
-                <td>@item.itemPrice</td>
+                <td>@item.itemSalePrice</td>
                 <td>@item.itemStock</td>
                 <td>@item.itemSold</td>
                 <td>@item.itemRemainStock</td>
