--- a/posSystem/Views/Category/CategoryIndex.cshtml
+++ b/posSystem/Views/Category/CategoryIndex.cshtml
@@ -35,7 +35,7 @@
             <th scope="col">Create Date</th>
             <th scope="col">Update Date</th>
             <th scope="col">Update Count</th>
-            <td scope="col">Action</td>
+            <th scope="col">Action</th>
         </tr>
     </thead>
     <tbody>
